<resources>
    <string name="app_name">Música</string>
    <string name="activity_sign_in_sign_in_text">Sign In</string>
    <string name="sub_app_name">musix-socio remix</string>
    <string name="email_text">EMAIL</string>
    <string name="password_text">PASSWORD</string>
    <string name="username_text">USERNAME</string>
    <string name="dive_in_text">Dive In</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_up_prompt">Don\'t have an account?</string>
    <string name="signup_prompt">SignUp</string>
    <string name="ProfileScreenToolbarText">Profile</string>

    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="playlist">Playlist</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="reportAndFeedback">Report and Feedback</string>
    <string name="signout">Sign Out</string>
    <string name="addPostTextHomeStream">Hello User..Share something with the world</string>
    <string name="edit_profile_profile_description">Edit Profile</string>
</resources>
