<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/navigation_menu_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_button">
        </item>
        <item
            android:id="@+id/navigation_menu_explore"
            android:title="@string/explore"
            android:icon="@drawable/ic_search_button">
        </item>
        <item
            android:id="@+id/navigation_menu_playlist"
            android:title="@string/playlist"
            android:icon="@drawable/ic_drawer_playlist">
        </item>
        <item
            android:id="@+id/navigation_menu_notifications"
            android:title="@string/notifications"
            android:icon="@drawable/ic_drawer_notifications">
        </item>
        <item
            android:id="@+id/navigation_menu_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile_button">
        </item>
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/navigation_menu_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_drawer_settings">
        </item>
        <item
            android:id="@+id/navigation_menu_report_and_feedback"
            android:title="@string/reportAndFeedback"
            android:icon="@drawable/ic_drawer_feedback">
        </item>
        <item
            android:id="@+id/navigation_menu_signOut"
            android:title="@string/signout"
            android:icon="@drawable/ic_drawer_signout">
        </item>
    </group>

</menu>