<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clipToPadding="false"
    android:focusableInTouchMode="true"
    tools:context="com.finiteloop.musica.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.siyamed.shapeimageview.CircularImageView
            android:id="@+id/activity_sign_up_profile_pic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_social" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/username_text"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/activity_sign_up_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/colorAccent"
                android:drawableRight="@drawable/ic_perm_identity_white_24dp"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/email_text"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/activity_sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@android:color/holo_red_light"
                android:drawableRight="@drawable/ic_mail_white_24dp"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/password_text"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/activity_sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@android:color/holo_red_light"
                android:drawableRight="@drawable/ic_vpn_key_white_24dp"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/ll"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:clipToPadding="false">

            <Button
                android:id="@+id/activity_sign_up_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/sign_in_text"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/activity_sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:elevation="8dp"
                android:padding="12dp"
                android:text="@string/dive_in_text"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

        </LinearLayout>


    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>

